# adventofcode2025

./: .gitignore  CMakeLists.txt
adventofcode2025/: CMakeLists.txt  adventofcode2025.cpp  adventofcode2025.h
adventofcode2025/Days/Day1/: Day1.cpp  Day1.h
adventofcode2025/Days/Day10/: Button.cpp  Button.h  Day10.cpp  Day10.h  Joltage.cpp  Joltage.h  Machine.cpp  Machine.h
adventofcode2025/Days/Day11/: Day11.cpp  Day11.h  Node.cpp  Node.h  Path.cpp  Path.h
adventofcode2025/Days/Day12/: Day12.cpp  Day12.h  Shape.cpp  Shape.h
adventofcode2025/Days/Day2/: Day2.cpp  Day2.h
adventofcode2025/Days/Day3/: Day3.cpp  Day3.h
adventofcode2025/Days/Day4/: Day4.cpp  Day4.h
adventofcode2025/Days/Day5/: Day5.cpp  Day5.h
adventofcode2025/Days/Day6/: Day6.cpp  Day6.h
adventofcode2025/Days/Day7/: Day7.cpp  Day7.h
adventofcode2025/Days/Day8/: Box.cpp  Box.h  Circuit.cpp  Circuit.h  Day8.cpp  Day8.h
adventofcode2025/Days/Day9/: Day9.cpp  Day9.h
